--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.2",
     "nodemailer": "^6.7.6",
     "nodemon": "^2.0.18"
@@ -13,7 +14,6 @@
   "description": "",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon app.js"
   },
